--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html.is-leaving .transition-fade{
 
 .navbarContainer{
     width: 100%;
-    min-width: 1000px;
+    min-width: 400px;
     background-color: rgb(61, 61, 61);
     display: flex;
     justify-content: center;
@@ -43,21 +43,23 @@ html.is-leaving .transition-fade{
 }
 
 .navbar{
-    min-width: 1000px;
+    min-width: 430px;
     background-color: #818181;
     height: 80px;
     width: 70%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 ul#horizontal-list{
-    min-width: 1000px;
+    min-width: 350px;
+
+    margin: auto;
+
+    text-align: center;
+
 	list-style: none;
-    vertical-align: middle;
     height: 100%;
-    width: 40%;
+    width: 70%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -66,6 +68,9 @@ ul#horizontal-list{
 ul#horizontal-list li {
     height: 100%;
     line-height: 100%;
+
+    text-align: center;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -89,32 +94,77 @@ ul#horizontal-list li a:hover{
     margin: 0 -1em;
 }
 
+/* This is the main page styling */
+
 h1#page-subtitle {
-    color: rgb(56, 56, 56);
     border-bottom: 1px solid black;
     text-align: left;
-    padding-left: 400px;
     padding-top: 40px;
+    padding-left: 10%;
+    color: rgb(30, 92, 30); 
+
+    padding-bottom: 10px; 
+    font-weight: normal; 
+    font-size: 50px;
 }
 
 img#profilePic{
-    height: 400px;
-    width: 400px;
-    float: right;
-    padding-right: 400px;
+    height: 300px;
+    width: 300px;
+    margin-left: 25%;
+    margin-right: 25%;
     border-radius: 10%;
-    margin-left: 50px;
+    padding-left: 10px;
 }
 
 .content{
-    align-self: center;
     width: 70%;
-    padding-left: 400px;
+    padding-left: 10%;
+    padding-right: 5%;
     text-align: left;
     font-size: larger;
     color: rgb(56, 56, 56);
     font-weight: normal;
     line-height: 27px;
+}
+
+
+.experienceEntry{
+    width: 100%;
+}
+
+.experienceEntry h2{
+
+    line-height: 30px; 
+    font-weight: normal;
+}
+
+.ContactInfo{
+    padding-left: 20%;
+    padding-top: 40px; 
+    font-size: 20px; 
+    line-height: 40px;
+}
+
+@media(min-width: 700px) {
+    /* This is the main page styling */
+    h1#page-subtitle {
+        padding-left: 20%;
+    }
+
+    img#profilePic{
+        height: 300px;
+        width: 300px;
+        float: right;
+        padding-right: 0%;
+        margin-left: 0%;
+        margin-right: 10%;
+    }
+
+    .content{
+        padding-left: 20%;
+        padding-right: 40%;
+    }
 }
 
 .ProjectEntry{
@@ -132,9 +182,10 @@ img#profilePic{
     box-shadow: 0px 0px 5px 5px rgba(92, 109, 92, 0.2);
 }
 
+
 div#ProjectsContainer{
-    width: 1000px;
-    height: 1000px;
+    width: 70%;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -143,6 +194,20 @@ div#ProjectsContainer{
     gap: 50px;
     padding-top: 50px;
 }
+
+@media(min-width: 1000px) {
+    /* This is the projects page styling */
+    div#ProjectsContainer{
+        width: 1000px;
+        height: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+
 
 .column {
     float: left;
