--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
+
 *{
     font-family: 'Barlow', sans-serif;
 }
@@ -43,7 +53,7 @@ html.is-leaving .transition-fade{
 }
 
 .navbar{
-    min-width: 430px;
+    min-width: 330px;
     background-color: #818181;
     height: 80px;
     width: 70%;
@@ -51,17 +61,19 @@ html.is-leaving .transition-fade{
 }
 
 ul#horizontal-list{
-    min-width: 350px;
+    min-width: 330px;
 
     margin: auto;
 
     text-align: center;
 
+    padding: 0;
+
 	list-style: none;
     height: 100%;
     width: 70%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -72,7 +84,6 @@ ul#horizontal-list li {
     text-align: center;
 
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
@@ -85,6 +96,7 @@ ul#horizontal-list li a{
     transition: 200ms;
     padding: 0.5em; 
     margin: 0 -0.5em;
+    font-size: small;
 }
 
 ul#horizontal-list li a:hover{
@@ -111,7 +123,7 @@ h1#page-subtitle {
 img#profilePic{
     height: 300px;
     width: 300px;
-    margin-left: 25%;
+    margin-left: 15%;
     margin-right: 25%;
     border-radius: 10%;
     padding-left: 10px;
@@ -164,6 +176,10 @@ img#profilePic{
     .content{
         padding-left: 20%;
         padding-right: 40%;
+    }
+
+    ul#horizontal-list li a{
+        font-size: larger;
     }
 }
 
