--- a/style.css
+++ b/style.css
@@ -108,10 +108,26 @@ ul#horizontal-list li a:hover{
 
 /* This is the main page styling */
 
+.SwitchLanguage{
+    font-size: large;
+    text-decoration: none;
+    color: rgb(30, 92, 30);
+}
+
+.switchLanguageField{
+    width: 70%;
+    margin: auto;
+    padding-top: 20px;
+    text-align: center;
+    font-size: larger;
+    font-weight: normal;
+    line-height: 27px;
+}
+
 h1#page-subtitle {
     border-bottom: 1px solid black;
     text-align: left;
-    padding-top: 40px;
+    padding-top: 20px;
     padding-left: 10%;
     color: rgb(30, 92, 30); 
 
@@ -176,6 +192,11 @@ img#profilePic{
     .content{
         padding-left: 20%;
         padding-right: 40%;
+    }
+    
+    .switchLanguageField{
+
+        margin: auto;
     }
 
     ul#horizontal-list li a{
