--- a/assets/css/stylezapro.css
+++ b/assets/css/stylezapro.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-    background-color: hwb(0 2% 91%);
+    background-color: hwb(0 0% 100%);
     color: #4e4e4e;
     font-family: CustomFont;
 
@@ -34,6 +34,21 @@ body {
     color: #1e1e1e;
   }
   
+  img {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 1;
+  }
+
+  @media (max-width: 1000px){
+    img{
+        width: 100%;
+    }
+  }
+
   a {
     color: #1e1e1e;
     text-decoration: none;
@@ -226,6 +241,7 @@ body {
     padding-left: 2rem;
   }
   
+
   .box-shadow-full {
     padding: 3rem 1.25rem;
     position: relative;
