--- a/assets/css/stylezapro.css
+++ b/assets/css/stylezapro.css
@@ -772,7 +772,7 @@ body {
     top: 5%;
     width: 100%;
     overflow: hidden;
-    background-color: rgb(0, 0, 0, 0.34);
+    background-color: rgb(0, 0, 0, 0.6);
     
   }
   
@@ -782,23 +782,23 @@ body {
   }
   
   .hero .hero-title {
-    color: #fff;
+    color: #EFD463;
     font-weight: 400;
-    font-size: 3rem;
+    font-size: 2rem;
   }
   @media (min-width: 768px) {
     .hero .hero-title {
-      font-size:5rem;
+      font-size:4rem;
     }
   }
   .hero .hero-subtitle {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 400;
-    color:rgba(170, 170, 170, 1)
+    color: #aba34a
   }
   @media (min-width: 768px) {
     .hero .hero-subtitle {
-      font-size: 4rem;
+      font-size: 3rem;
     }
   }
   .hero .text-slider-items {
