--- a/assets/css/stylezapro.css
+++ b/assets/css/stylezapro.css
@@ -798,7 +798,7 @@ body {
   }
   
   .hero .hero-title {
-    color: #ff88c3;
+    color: rgb(248, 178, 189);
     font-weight: 400;
     font-size: 2.5rem;
     opacity: 0;
